XTJETTY-22: Improve default memory settings Done.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/xwiki-tools/trunk@34688 f329d543-caf0-0310-9063-dda96c69346f